{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 62,
  "lineage": "a8396d0b-e4e4-7d6a-db47-c77e99e8792d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "testfirewall",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/azureFirewalls/testfirewall/networkRuleCollections/testcollection",
            "name": "testcollection",
            "priority": 100,
            "resource_group_name": "rg1",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "8.8.4.4",
                  "8.8.8.8"
                ],
                "destination_ports": [
                  "53"
                ],
                "name": "testrule",
                "protocols": [
                  "TCP",
                  "UDP"
                ],
                "source_addresses": [
                  "10.0.0.0/16"
                ]
              }
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_firewall.example",
            "azurerm_public_ip.example",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/vm-nic",
            "internal_domain_name_suffix": "5mnralugfsrutbxb2ukgcs00ce.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vm-nic-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1"
              }
            ],
            "location": "northeurope",
            "name": "vm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg1"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.vnet.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/ssh",
            "location": "northeurope",
            "name": "ssh",
            "resource_group_name": "rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh_from_mypublicip",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "88.120.30.227",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/publicIPAddresses/testpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.54.17.111",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "testpip",
            "resource_group_name": "rg1",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/routeTables/MyRouteTable/routes/AzFirewallRoute",
            "name": "AzFirewallRoute",
            "next_hop_in_ip_address": "10.0.254.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg1",
            "route_table_name": "MyRouteTable",
            "timeouts": null
          },
          "dependencies": [
            "azurerm_firewall.example",
            "azurerm_public_ip.example",
            "azurerm_resource_group.example",
            "azurerm_route_table.example",
            "azurerm_subnet.example",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/routeTables/MyRouteTable",
            "location": "northeurope",
            "name": "MyRouteTable",
            "resource_group_name": "rg1",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "AzFirewallRoute",
                "next_hop_in_ip_address": "10.0.254.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1"
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.254.0/24",
            "address_prefixes": [
              "10.0.254.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "rg1",
            "virtual_network_name": "acctvnet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "import",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
            "name": "subnet1",
            "network_security_group_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/ssh",
            "resource_group_name": "rg1",
            "route_table_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/routeTables/MyRouteTable",
            "virtual_network_name": "acctvnet"
          }
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "rg1",
            "virtual_network_name": "acctvnet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
            "network_security_group_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/ssh",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.ssh",
            "azurerm_resource_group.example",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet",
            "module.vnet.data.azurerm_subnet.import"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
            "route_table_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/routeTables/MyRouteTable",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.ssh",
            "azurerm_resource_group.example",
            "azurerm_route_table.example",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_resource_group.vnet",
            "module.vnet.data.azurerm_subnet.import"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "2e101bfb-2c86-49a3-86e1-e514614b5a14",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet",
            "location": "northeurope",
            "name": "acctvnet",
            "resource_group_name": "rg1",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/ssh"
              },
              {
                "address_prefix": "10.0.254.0/24",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              }
            ],
            "tags": {
              "ENV": "test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.vnet.data.azurerm_resource_group.vnet"
          ]
        }
      ]
    }
  ]
}